# DeskGap

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  netlify.toml  package-lock.json  package.json
app/: DESKGAP_DEFAULT_APP  app.css  app.html  main.js
core/: .gitignore  binding.gyp  gyp-configure.js  package-lock.json  package.json  package_dist.json
core/lib/: tsconfig-d-ts.json
core/lib/common/: events.ts
core/lib/node/: accelerator.ts  app.ts  async-node.ts  browser-window.ts  dialog.ts  globals.ts  index.ts  menu.ts  system-preferences.ts  tsconfig.json  webview.ts
core/lib/ui/: bootstrap.ts  preload.ts  preload_gtk.js  preload_mac.js  preload_trident.js  preload_win.js
core/src/: index.cc  native_exception.h  platform_data.h
core/src/app/: app.h  app_wrap.cc  app_wrap.h
core/src/dialog/: dialog.h
core/src/dispatch/: node_dispatch.cc  node_dispatch.h  ui_dispatch.cc  ui_dispatch_platform.h
core/src/gtk/: BrowserWindow.cpp  BrowserWindow_impl.h  app.cpp  dialog.cpp  menu.cpp  menu_impl.h  shell.cpp  system_preferences.cpp  ui_dispatch_platform.cpp  webview.cpp  webview_impl.h
core/src/mac/: BrowserWindow.mm  BrowserWindow_impl.h  app.mm  dialog.mm  menu.mm  menu_impl.h  shell.mm  system_preferences.mm  webview.mm  webview_impl.h
core/src/menu/: menu.h  menu_wrap.cc  menu_wrap.h
core/src/shell/: shell.h  shell_wrap.cc
core/src/system_preferences/: system_preferences.h  system_preferences_wrap.cc
core/src/util/: js_native_convert.h  mime.h
core/src/webview/: webview.h  webview_wrap.cc  webview_wrap.h  (+1 more)
docs/: .gitignore  README.md  build.sh  mkdocs.yml  requirements.txt
docs/api/: building.md  changelog.md
js/: CMakeLists.txt  package-lock.json  package.json
js/common/: async-node.ts  events.ts
js/node/: bindings.ts  menu.ts  message-node.ts  native-exception.ts  process.ts  shell.ts  tsconfig.json  webpack.config.js
js/node/internal/: app-info.ts  bootstrap.ts  cjs-intercept.ts
lib/: CMakeLists.txt  README.md
lib/src/include/deskgap/: app.h  app.hpp  argv.hpp  browser_window.hpp  dialog.hpp  dispatch.hpp  exception.hpp  menu.hpp  shell.hpp  system_preferences.hpp  webview.hpp  winrt_webview.hpp
lib/src/platform/: CMakeLists.txt
lib/src/platform/gtk/: BrowserWindow.cpp  BrowserWindow_impl.h  CMakeLists.txt  app.cpp  dialog.cpp  exception.cpp  glib_exception.cpp  glib_exception.h  menu.cpp  menu_impl.h  platform_gtk.cpp  shell.cpp  system_preferences.cpp  ui_dispatch_platform.cpp  webview.cpp  webview_impl.h
lib/src/platform/gtk/util/: convert_js_result.h
lib/src/platform/mac/: BrowserWindow.mm  BrowserWindow_impl.h  CMakeLists.txt  app.mm  dialog.mm  dispatch.mm  exception.mm  menu.mm  menu_impl.h  shell.mm  system_preferences.mm  ui_dispatch_platform.mm  webview.mm  webview_impl.h
lib/src/platform/mac/cocoa/: DeskGapLocalURLSchemeHandler.h  DeskGapLocalURLSchemeHandler.mm  DeskGapWindow.m
lib/src/platform/mac/util/: NSScreen+Geometry.m  NSScreen_geo.h  string_convert.h
lib/src/platform/win/: BrowserWindow_impl.h  CMakeLists.txt  app.cpp  argv.cpp  delay_load_hook.cpp  dialog.cpp  dispatch.cpp  dispatch_wnd.hpp  exception.cpp  menu.cpp  menu_impl.h  platform.cpp  platform_win.cpp  shell.cpp  system_preferences.cpp  trident_webview.cpp  ui_dispatch_platform.cpp  webview.cpp  webview_impl.h  winrt_webview.cpp
lib/src/platform/win/util/: dpi.cpp  winrt.cpp  winrt.h  wstring_utf8.h
lib/src/utils/: mime.hpp  semaphore.hpp
lib/src/wrappers/: app_c.cc
node/: CMakeLists.txt  WHATS_NEW.md  package.json
node/app/: app.html  main.js  package.json
node/js/: CMakeLists.txt  tsconfig-d-ts.json
node/js/node/: app.ts  browser-window.ts  index.ts  process.ts  shell.ts  system-preferences.ts  webview.ts
node/js/node/internal/: app-path.ts  async-node.ts  js-evaluation.ts
node/js/node/internal/menu/: roles.ts
node/js/ui/: bootstrap.ts  preload.ts  tsconfig.json
node/npm/: .npmignore  cli.js  deskgap.d.ts  install.js  package-lock.json  package.json  run.js  util.js
node/npm/test/: index-ts.ts  index.js  package.json
node/scripts/: bin2code.js  dist.sh  prepare-npm.sh  publish-release.sh  release.sh  test-npm.sh
node/src/: main.cc
node/src/node_api/: node_api.h
node/src/node_bindings/: index.cc  index.hpp  lib_path.h
node/src/node_bindings/app/: app_wrap.h
node/src/node_bindings/dispatch/: ui_dispatch.cc
node/src/node_bindings/menu/: menu_wrap.h
node/src/node_bindings/shell/: shell_wrap.cc
node/src/node_bindings/system_preferences/: system_preferences_wrap.h
node/src/node_bindings/webview/: webview_wrap.cc
node/src/node_bindings/window/: browser_window_wrap.cc  browser_window_wrap.h
node/src/resources/mac/: Info.plist
node/src/resources/win/: App.manifest
node/test/: index.js  package-lock.json  package.json  start.js  utils.js
node/test/api-tests/: app.js  async-node.js  browser-window.js  ui.js  webview.js  webviews.js
node/test/fixtures/apps/app-with-product-name/: package.json
node/test/fixtures/apps/arbitrary-code/: index.js
node/test/fixtures/files/: blank.html  web-view-side-services.html  web-view-ua-service.html
node/test/fixtures/modules/: async-node-simple-module.js
npm/: .gitignore  dist_files.json  install.js  node-version.js  package-lock.json  package.json  util.js
scripts/: archive-node-static-lib.js  bin2code.js  build-folder.js  build-node.js  download-deps.js  package-lock.json  package.json  prepare-npm-publish.js  release.js  utils.js
src/: Environment.cc  Environment.hpp  main.cc  platform.h  platform_gtk.cpp  platform_mac.mm  platform_win.cpp
src/dispatch/: node_dispatch.cc  ui_dispatch.cc
src/js/: package-lock.json  package.json  tsconfig-d-ts.json
src/node_bindings/: index.cc  platform_data.h
test/: index.js  package.json  start.js  utils.js
test/api-tests/: app.js  async-node.js  browser-window.js  message.js  webview.js  webviews.js
website/: .gitignore  README.md  build.sh  mkdocs.yml  package-lock.json  package.json
website/docs/: api.md  architecture.md  building.md  changelog.md  devtools.md
(+72 files in other folders)
